compiler-plugin/src/testData/reference/errors/MustBeObject.kt
package reference.errors

<!SYMBOL_EXPORT_REFERENCE_NOT_OBJECT!>@ExportReferences
class Test : BaseReferenceExporter() {

}<!>

